--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "meteor-node-stubs": "~0.2.4",
     "moment": "^2.18.1",
     "node-thermal-printer": "^1.0.5",
+    "printer": "^0.2.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-pure-render-mixin": "^15.6.0",
